# OnexApp

./: .gitignore  .gitignore-snapshots  .gitmodules  CMakeLists.txt  LICENSE  OnexKernel  OnexLang  OnexOS  README.md  gdb-commands-jlink.txt  makefile  makefile-s132  suppressions
android/: build.gradle  gradle.properties  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/onexapp/: CMakeLists.txt  build.gradle
android/onexapp/src/main/: AndroidManifest.xml
android/onexapp/src/main/java/android/network/object/onexapp/: AlarmReceiver.java  BluetoothReceiver.java  DeviceListActivity.java  EternalService.java  EternalServiceJob.java  EternalServiceRestarter.java  NUSService.java  OnexNativeActivity.java  UartService.java
android/onexapp/src/main/jni/: Android.mk  Application.mk
android/onexapp/src/main/res/layout/: device_element.xml  device_list.xml
android/onexapp/src/main/res/values/: strings.xml  styles.xml
android/onexapp/src/main/res/xml/: device_filter.xml
sascha/: CMakeLists.txt  VulkanAndroid.cpp  VulkanAndroid.h  VulkanBase.cpp  VulkanBase.h  VulkanBuffer.hpp  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanSwapChain.hpp  VulkanTools.cpp  VulkanTools.h  camera.hpp  keycodes.hpp
src/: OnexApp.cpp  OnexAppBL.c  OnexAppIoT.c  OnexAppMicroBit.c  OnexAppWatch.c  OnexOS.c  behaviours_2.c  calendar.cpp  calendar.h  display.cpp  display.h  gui.cpp  gui.h  im-gui.cpp  im-gui.h  imgui.cpp  onex.cpp  ux-features.cpp  ux-features.h
